# gtk4-custom-ruler-widget

./: .gitignore  CMakeLists.txt  README.md
demo-app/: CMakeLists.txt  builder.ui  main.c
ruler/: CMakeLists.txt  crw-ruler.c  crw-ruler.h
